Configure dynamic API URL for frontend and dynamic CORS origins for backend